Fix pagination button spacing & css
This commit contains,
- Add shadow boxes css to posts in home.html
- Fix pagination button to have 20px spacing between them

--- a/notes/static/notes/style.css
+++ b/notes/static/notes/style.css
@@ -2,18 +2,20 @@ body {
   font-family: 'Inconsolata';font-size: 22px;
   justify-content: center;
   background: white;
-
 }
+
 a{
   color: black;
 }
+
 .content-section {
   background: white;
   padding: 10px 20px;
-  border: 1px solid  black;
-  border-radius: 1px;
+  border: 1px solid  lightblue;
+  border-radius: 20px;
   margin-bottom: 20px;
   margin-top: 30px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 .mr-2{
@@ -24,7 +26,7 @@ nav {
   position: fixed;
   width: 100%;
   top: 0%;
-  background: white;
+  background: lightblue;
   -webkit-transition: all 650ms cubic-bezier(0.22, 1, 0.25, 1);
   transition: all 650ms cubic-bezier(0.22, 1, 0.25, 1);
 }
@@ -108,4 +110,9 @@ ul {
 
 .site-header .navbar-nav .nav-link.active {
   font-weight: 500;
+}
+
+.mb-4, .my-4 {
+  margin-bottom: 1.5rem !important;
+  margin-left: 20px;
 }
